--- a/DockerFile
+++ b/DockerFile
@@ -1,2 +1,14 @@
 FROM mysql:5.7
 ENV MYSQL_ROOT_PASSWORD root
+
+# Use the official image of MySQL as a base
+# FROM mysql:latest
+
+# Define other environment variables if desired
+# ENV MYSQL_ROOT_PASSWORD=rootpassword
+# ENV MYSQL_DATABASE=mydatabase
+# ENV MYSQL_USER=myuser
+
+
+# Copy an SQL script to boot the database(optional)
+# COPY ./init.sql /docker-entrypoint-initdb.d/
